' Generated by UML Generator
' Encoded: dPHDQ-Cm48Rl_XLpbDaqxDcqeLyK0c4fEBUb1qMUE4DjAKXAePksltt7JXn_AM6t5nzctddcrOoiM-UbzRkoYDmhwQsqiWHLIEVklBUqsdcSAwDJ-eFmCzfGXg38gWAZg5R1W_IO6_kURb7HcfJqP3Ji8u0hTKmba39AvrNiYZy_WZLYA8yhARcKisvDcDs_2_9O9l1iJRPJFavWPKo1KaUVZPiUyH5BSt2ovqDwKfzGc9pn32_G6xqmUOuMReQHQOv-hhb6AnJnoVQ9KahIGjhSDLP_lx2PDqDPw-JPai85EhVSI1qOphRA9v2PtOg7sRGuNoLw1T-PpJ5rQAzbYTszX7OriaWwzKQzjkpMTeqMNUe4Xim9z8WJ6FBgK_7iVp56n1qhLR2vDAD4FRCgUZBAavaVqEB289weyBpzVM-rwph8mwublE05ENzzh9XDmF5EalurEsNZWRhjU7GplWR_laFIx6ij5SAOyXMYBEFkdhwapeJn6xH3zylAzp1KLHZxdmNQU15AiVlmAp6TVipwyhF2MJELwCAF5U1TL7UXtIjHPVgOu083xSxesaRZJ1zmYphZn_Wl
' URL: http://www.plantuml.com/plantuml/uml/dPHDQ-Cm48Rl_XLpbDaqxDcqeLyK0c4fEBUb1qMUE4DjAKXAePksltt7JXn_AM6t5nzctddcrOoiM-UbzRkoYDmhwQsqiWHLIEVklBUqsdcSAwDJ-eFmCzfGXg38gWAZg5R1W_IO6_kURb7HcfJqP3Ji8u0hTKmba39AvrNiYZy_WZLYA8yhARcKisvDcDs_2_9O9l1iJRPJFavWPKo1KaUVZPiUyH5BSt2ovqDwKfzGc9pn32_G6xqmUOuMReQHQOv-hhb6AnJnoVQ9KahIGjhSDLP_lx2PDqDPw-JPai85EhVSI1qOphRA9v2PtOg7sRGuNoLw1T-PpJ5rQAzbYTszX7OriaWwzKQzjkpMTeqMNUe4Xim9z8WJ6FBgK_7iVp56n1qhLR2vDAD4FRCgUZBAavaVqEB289weyBpzVM-rwph8mwublE05ENzzh9XDmF5EalurEsNZWRhjU7GplWR_laFIx6ij5SAOyXMYBEFkdhwapeJn6xH3zylAzp1KLHZxdmNQU15AiVlmAp6TVipwyhF2MJELwCAF5U1TL7UXtIjHPVgOu083xSxesaRZJ1zmYphZn_Wl
' Generated on: 2026-07-14T23:28:18.881078616

@startuml
skinparam classAttributeIconSize 0
hide circle

class CategorySpecification {
  -category: String
  --
  +CategorySpecification(category: String)
  +isSatisfiedBy(item: Product): boolean
}

class SpecificationDemo {
  -{static} log: SingletonLogger = SingletonLogger.getInstance()
  --
  +{static} main(args: String[]): void
}

class PriceLessThanSpecification {
  -price: double
  --
  +PriceLessThanSpecification(price: double)
  +isSatisfiedBy(item: Product): boolean
}

class Product {
  -name: String
  -category: String
  -price: double
  -inStock: boolean
  --
  +Product(name: String, category: String, price: double, inStock: boolean)
  +getName(): String
  +getCategory(): String
  +getPrice(): double
  +isInStock(): boolean
}

class ProductFilter {
  +{static} filter(products: List<Product>, spec: Specification<Product>): List<Product>
}

class InStockSpecification {
  +isSatisfiedBy(item: Product): boolean
}

interface Specification {
  ~isSatisfiedBy(item: T): boolean
  ~and(other: Specification<T>): Specification<T>
  ~or(other: Specification<T>): Specification<T>
  ~not(): Specification<T>
}

CategorySpecification ..|> Specification
CategorySpecification ..> Product
PriceLessThanSpecification ..|> Specification
PriceLessThanSpecification ..> Product
ProductFilter ..> Specification
InStockSpecification ..|> Specification
InStockSpecification ..> Product
Specification ..> Specification
@enduml